# tiny-vm

./: .gitignore  README.md
examples/: CMakeLists.txt  compare_and_swap.cpp  memory_barriers.cpp
tiny-vm_01_foundations/: Makefile  main.c  tiny_vm.c  tiny_vm.h
tiny-vm_02_multithreading/: main.c  tiny_vm.c  tiny_vm.h
tiny-vm_03_global_scope/: main.c  tiny_vm.c  tiny_vm.h
tiny-vm_04_synchronized/: main.c  tiny_vm.c  tiny_vm.h
tiny-vm_05_refactoring/: CMakeLists.txt
tiny-vm_05_refactoring/src/: main.c  types.h
tiny-vm_05_refactoring/src/core/: vm.c  vm.h
tiny-vm_05_refactoring/src/instruction/: instruction.c  instruction.h
tiny-vm_05_refactoring/src/memory/: memory.c  memory.h
tiny-vm_05_refactoring/src/synchronization/: synchronization.c
tiny-vm_05_refactoring/src/thread/: thread.c
tiny-vm_05_refactoring/src/utils/: logger.c
tiny-vm_06_functions/: CMakeLists.txt
tiny-vm_06_functions/src/: types.h
tiny-vm_06_functions/src/core/: vm.c
tiny-vm_06_functions/src/execution/: execution.c
tiny-vm_06_functions/src/function/: function.c  function.h
tiny-vm_06_functions/src/instruction/: instruction.c  instruction.h
tiny-vm_06_functions/src/memory/: memory.h
tiny-vm_06_functions/src/utils/: logger.h
tiny-vm_07_compilation/src/: compiler_main.c  main.c  types.h
tiny-vm_07_compilation/src/compiler/: compiler.c  source_loader.h
tiny-vm_07_compilation/src/core/: vm.c  vm.h
tiny-vm_07_compilation/src/execution/: execution.h
tiny-vm_07_compilation/src/function/: function.c
tiny-vm_07_compilation/src/memory/: memory.c
tiny-vm_07_compilation/src/thread/: thread.c  thread.h
tiny-vm_09_function-call-stack/: CMakeLists.txt
tiny-vm_09_function-call-stack/examples/: counter.tvm  counter.tvmc  hello.tvm  hello.tvmc
tiny-vm_09_function-call-stack/src/: compiler_main.c  types.h  vm_main.c
tiny-vm_09_function-call-stack/src/compiler/: compiler.h  source_loader.c
tiny-vm_09_function-call-stack/src/core/: vm.c
tiny-vm_09_function-call-stack/src/execution/: execution.c  execution.h  stack.c
tiny-vm_09_function-call-stack/src/memory/: memory.c  memory.h
tiny-vm_09_function-call-stack/src/synchronization/: synchronization.h
tiny-vm_10_garbage-collection/: CMakeLists.txt
tiny-vm_10_garbage-collection/src/compiler/: bytecode.c  compiler.c  compiler.h
tiny-vm_10_garbage-collection/src/execution/: execution.c  stack.h
tiny-vm_10_garbage-collection/src/function/: function.h
tiny-vm_10_garbage-collection/src/instruction/: instruction.c  instruction.h
tiny-vm_10_garbage-collection/src/memory/: memory.c
tiny-vm_10_garbage-collection/src/thread/: thread.c  thread.h
tiny-vm_10_garbage-collection/src/utils/: logger.c
